--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+
+    <title>TITLE</title>
+    <meta name="description" content="loremloremlorem?" />
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <link
+      rel="shortcut icon"
+      href="images/favicon/favicon.png"
+      type="image/png" />
+    <link rel="apple-touch-icon" href="images/favicon/apple-touch-icon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="images/favicon/apple-touch-icon-72x72.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="images/favicon/apple-touch-icon-114x114.png" />
+
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#36A26B" />
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#36A26B" />
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#36A26B" />
+
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <!-- fonts -> themes html -> title & description html -->
+    <!-- -header- -->
+    @@include("html/_header.html", {})
+  </body>
   <script src="./js/main.min.js"></script>
 </html>
